add (succinct) CONTRIBUTING.md

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -14,5 +14,5 @@ jobs:
         with:
           version: v1.1.17
       - run: aiken fmt --check
-      - run: aiken check -D
+      - run: aiken check -D -P relative-to-tests
       - run: aiken build
