--- a/aiken.toml
+++ b/aiken.toml
@@ -33,6 +33,7 @@ source = "github"
 [config.default]
 # The name of the scopes token. /!\ Also change in recipes/scopes.sh if edited.
 scopes_token_name = "amaru scopes"
+
 # PRAGMA's general assembly members verification key hashes.
 pragma_general_assembly = [
   { bytes = "9a296a8571c597459b54ddc515668c2cd357bec3284413f4d92c67fd", encoding = "base16" },
@@ -41,20 +42,13 @@ pragma_general_assembly = [
   { bytes = "7095faf3d48d582fbae8b3f2e726670d7a35e2400c783d992bbdeffb", encoding = "base16" },
   { bytes = "058a5ab0c66647dcce82d7244f80bfea41ba76c7c9ccaf86a41b00fe", encoding = "base16" },
 ]
-# Minimum amount of μUSDM (no decimals) per ADA
-min_microusdm_per_ada = 500_000
-# Policy id for USDM
-usdm_policy_id = { bytes = "c48cbb3d5e57ed56e276bc45f99ab39abe94e6cd7ac39fb402da47ad", encoding = "base16" }
-# Asset name for USDM
-usdm_asset_name = { bytes = "0014df105553444d", encoding = "base16" }
 
 [config.preview]
 # The name of the scopes token. /!\ Also change in recipes/scopes.sh if edited.
 scopes_token_name = "amaru scopes"
+
+# PRAGMA's general assembly members verification key hashes.
 pragma_general_assembly = [
   { bytes = "7095faf3d48d582fbae8b3f2e726670d7a35e2400c783d992bbdeffb", encoding = "base16" },
   { bytes = "70b46e985fa50328fcb3d80594b6c5c54974a08d2c766a47570bfa36", encoding = "base16" },
 ]
-min_microusdm_per_ada = 150_000 # Minimum amount of μUSDM (no decimals) per ADA
-usdm_policy_id = { bytes = "fa3eff2047fdf9293c5feef4dc85ce58097ea1c6da4845a351535183", encoding = "base16" }
-usdm_asset_name = { bytes = "74494e4459", encoding = "base16" }
